--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
       subline: "I made this just for you 🥺💗",
       question: "Will you be my Valentine?",
       winTitle: "YAYYYYY 💘",
-      winMsg: winMsg: "Now you are officially my Valentine forever 💘\n\nMy Maya 💖,\nFrom your Budu ❤️\n\nEven though you are in the USA and I am here, my heart is always with you.\nEvery night I miss you more than yesterday.\n\nUSA may have you physically, but your heart belongs to Budu forever 😘\n\nI miss you so much Maya...\nLove always,\nYour Budu 💕",
+      winMsg: "Now you are officially my Valentine forever 💘\n\nMy Maya 💖,\nFrom your Budu ❤️\n\nEven though you are in the USA and I am here, my heart is always with you.\nEvery night I miss you more than yesterday.\n\nUSA may have you physically, but your heart belongs to Budu forever 😘\n\nI miss you so much Maya...\nLove always,\nYour Budu 💕",
 
       noPhrases: [
         "NO 🙈", "Are you sure? 😳", "Think again 😏", "Really?? 🥺",
@@ -511,4 +511,5 @@
   </script>
 </body>
 </html>
+
 
