--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
       subline: "I made this just for you 🥺💗",
       question: "Will you be my Valentine?",
       winTitle: "YAYYYYY 💘",
-      winMsg: "Now you are officially my Valentine forever 💘\n\nMy Maya 💖,\nFrom your Budu ❤️\n\nEven though you are in the USA and I am here, my heart is always with you.\nEvery night I miss you more than yesterday.\n\nUSA may have you physically, but your heart belongs to Budu forever 😘\n\nI miss you so much Maya...\nLove always,\nYour Budu 💕",
+      winMsg: "Now you are officially my Valentine forever 💘\n\nMy Maya 💖,\n\nFrom your Sanu… ❤️\n\nI don’t even know where to start, because my love for you is bigger than words.\nEvery day with you feels special, and every memory of us makes my heart smile.\n\nYou are not just my boyfriend… you are my comfort, my safe place, my happiness, my everything.\nWhen I think about you, my heart feels warm.\nWhen I miss you, it feels like a piece of me is missing.\n\nI love the way you care for me.\nI love your voice, your smile, your hugs, your presence.\nYou make my world brighter just by existing.\n\nNo matter what happens in life, I want you by my side.\nI want to grow with you, laugh with you, cry with you, build dreams with you.\n\nYou are my today and my forever.\nYou are my heart.\nYou are my love.\n\nThank you for choosing me.\nThank you for loving me.\n\nI am always yours…\nForever and always.\n\nLove,\nYour Budu 💕",
 
       noPhrases: [
         "NO 🙈", "Are you sure? 😳", "Think again 😏", "Really?? 🥺",
@@ -511,5 +511,6 @@
   </script>
 </body>
 </html>
+
 
 
